Fix a small layout issue in the Internet radio tutorial
The bottom margin was accidentally applied also to the <a> element, causing a
gap between the first and second text line of the tutorial.

--- a/css/style-sidebar.css
+++ b/css/style-sidebar.css
@@ -5,7 +5,7 @@
  * later. See the COPYING file.
  *
  * @author Pauli Järvinen <pauli.jarvinen@gmail.com>
- * @copyright Pauli Järvinen 2018 - 2020
+ * @copyright Pauli Järvinen 2018 - 2021
  */
 
 #app-sidebar {
@@ -253,7 +253,8 @@
 	padding: 15px 15px 45px 15px;
 }
 
-#app-sidebar .tutorial * {
+#app-sidebar .tutorial h2,
+#app-sidebar .tutorial li {
 	margin-bottom: 10px;
 }
 
